--- a/package.json
+++ b/package.json
@@ -2,21 +2,30 @@
   "name": "react-redux-typescript-boilerplate",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.6.1",
+  "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.20.24",
-    "@types/react": "^16.14.15",
+    "@types/node": "^12.20.19",
+    "@types/react": "^16.14.13",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.18",
+    "@types/react-router": "^5.1.16",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.12",
+    "typescript": "^4.1.6"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
+    "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5",
+    "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.6"
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
